# dmimggrad

./: Makefile  configure  configure.ac  dmimggrad.c  dmimggrad.par  dmimggrad.t  t_dmimggrad.c
src/: Makefile.am  Makefile.in  dmimggrad.c  dmimggrad.par  dmimggrad.xml  t_dmimggrad.c
test/: Makefile.am  Makefile.in
wrapper/: Makefile.am  Makefile.in
